Fix header nav responsive spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -82,7 +82,7 @@ header {
 .header-nav-links.nav-links {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 16rem;
   padding-top: 1em;
 
